@@ -136,6 +136,9 @@
 	Fixed `:[un]select !<text/html>` treating "<text/html>" as an external
 	command.
 
+	Fixed !! not affecting commands that include %s or %v macro.  Thanks to
+	James Dietrich.
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
